--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,6 +11,11 @@
     --text-light     : #fff;
     --text-dark      : #000;
 
+    /* BackToTop */
+    --backtotop-bg-light: var(--luxury-light);
+    --backtotop-bg-dark : var(--luxury-dark);
+    --backtotop-text    : var(--luxury-gold);
+
     /* Buttons */
     --btn-bg  : var(--luxury-gold);
     --btn-text: var(--luxury-light);
@@ -50,6 +55,7 @@ body.light {
     --footer-bg    : var(--footer-bg-light);
     --menu-bg      : var(--menu-bg-light);
     --menu-text    : var(--menu-text-light);
+    --backtotop-bg : var(--backtotop-bg-light);
     --card-bg      : var(--card-bg-light);
     --text-page    : var(--text-page-light);
     --footer-border: var(--footer-border-light);
@@ -62,6 +68,7 @@ body.dark {
     --footer-bg    : var(--footer-bg-dark);
     --menu-bg      : var(--menu-bg-dark);
     --menu-text    : var(--menu-text-dark);
+    --backtotop-bg : var(--backtotop-bg-dark);
     --card-bg      : var(--card-bg-dark);
     --text-page    : var(--text-page-dark);
     --footer-border: var(--footer-border-dark);
@@ -80,7 +87,7 @@ body {
     padding         : 0;
     font-family     : 'Times New Roman', Times, serif;
     width           : 100%;
-    height          : 100%;
+    height          : auto;
     background-color: var(--bg-color);
     color           : var(--text-color);
     overflow-y      : auto;
