--- a/src/styles/ClientLayout.scss
+++ b/src/styles/ClientLayout.scss
@@ -1,3 +1,5 @@
+/* ================= ClientLayout.scss ================= */
+
 .client-layout-container {
     display       : flex;
     flex-direction: column;
