#11 design booking page (01)

--- a/src/styles/ClientLayout.scss
+++ b/src/styles/ClientLayout.scss
@@ -10,9 +10,11 @@
         flex            : 1;
         width           : 100%;
         margin          : 0;
-        padding         : 0;
         background-color: var(--bg-color);
-        padding-top     : 60px !important;
+        padding-top     : 70px !important;
+        padding-left    : 24px !important;
+        padding-right   : 24px !important;
+        padding-bottom  : 24px !important;
     }
 }
 
