#64 (fix) design pitch details page

--- a/src/pages/client/pitch/PitchDetailsPage.scss
+++ b/src/pages/client/pitch/PitchDetailsPage.scss
@@ -122,6 +122,7 @@
                 border-radius: 12px;
                 font-weight  : 700;
                 background   : #faad14;
+                color: #fff;
                 border       : none;
 
                 &:hover {
